--- a/QRScanner/app/src/main/res/layout/activity_main.xml
+++ b/QRScanner/app/src/main/res/layout/activity_main.xml
@@ -13,13 +13,13 @@
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent" />
 
-    <Button
+    <!--Button
         android:id="@+id/flasher"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="toggleFlash"
         android:text="Flasher"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent" /-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
