--- a/QRScanner/app/src/main/res/layout/activity_main.xml
+++ b/QRScanner/app/src/main/res/layout/activity_main.xml
@@ -23,4 +23,9 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <com.amila.qrscanner.BarcodeTrackerView
+        android:id="@+id/barcode_tracker_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
