Bring back the result view

--- a/QRScanner/app/src/main/res/layout/activity_barcode_result.xml
+++ b/QRScanner/app/src/main/res/layout/activity_barcode_result.xml
@@ -24,6 +24,17 @@
         android:onClick="back"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/open_browser"
+        app:layout_constraintTop_toTopOf="@+id/barcode_result" />
+
+    <Button
+        android:id="@+id/open_browser"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="openBrowser"
+        android:text="Open in browser"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/back"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/barcode_result" />
 
