--- a/QRScanner/app/src/main/res/layout/activity_barcode_result.xml
+++ b/QRScanner/app/src/main/res/layout/activity_barcode_result.xml
@@ -4,13 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".BarcodeResultActivity">
+    tools:context=".BarcodeResultActivity"
+    android:background="@color/cardview_dark_background">
 
     <TextView
         android:id="@+id/barcode_result"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Result"
+        android:textColor="#F4F4F4"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,7 +28,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/open_browser"
-        app:layout_constraintTop_toTopOf="@+id/barcode_result" />
+        app:layout_constraintTop_toTopOf="@+id/barcode_result"
+        app:layout_constraintVertical_bias="0.7" />
 
     <Button
         android:id="@+id/open_browser"
@@ -36,6 +40,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/back"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/barcode_result" />
+        app:layout_constraintTop_toTopOf="@+id/barcode_result"
+        app:layout_constraintVertical_bias="0.7" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
