--- a/QRScanner/app/src/main/res/layout/activity_barcode_result.xml
+++ b/QRScanner/app/src/main/res/layout/activity_barcode_result.xml
@@ -9,9 +9,12 @@
 
     <TextView
         android:id="@+id/barcode_result"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
         android:text="Result"
+        android:textAlignment="center"
         android:textColor="#F4F4F4"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
