--- a/QRScanner/app/src/main/res/values/colors.xml
+++ b/QRScanner/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#000000</color>
+    <color name="colorPrimaryDark">#292929</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="transparentDark">#3C000000</color>
+    <color name="invisible">#00000000</color>
 </resources>
