--- a/QRScanner/app/src/main/res/layout/activity_barcode_result.xml
+++ b/QRScanner/app/src/main/res/layout/activity_barcode_result.xml
@@ -23,16 +23,16 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/back"
+        android:id="@+id/copy"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Done"
-        android:onClick="back"
+        android:onClick="copyToClipboard"
+        android:text="Copy to Clipboard"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/open_browser"
         app:layout_constraintTop_toTopOf="@+id/barcode_result"
-        app:layout_constraintVertical_bias="0.7" />
+        app:layout_constraintVertical_bias="0.6" />
 
     <Button
         android:id="@+id/open_browser"
@@ -41,9 +41,21 @@
         android:onClick="openBrowser"
         android:text="Open in browser"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/back"
+        app:layout_constraintEnd_toStartOf="@+id/copy"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/barcode_result"
-        app:layout_constraintVertical_bias="0.7" />
+        app:layout_constraintVertical_bias="0.6" />
+
+    <Button
+        android:id="@+id/back"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="back"
+        android:text="Done"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/copy"
+        app:layout_constraintStart_toStartOf="@+id/copy"
+        app:layout_constraintTop_toBottomOf="@+id/open_browser"
+        app:layout_constraintVertical_bias="0.4" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
