--- a/QRScanner/app/src/main/res/values/styles.xml
+++ b/QRScanner/app/src/main/res/values/styles.xml
@@ -10,4 +10,10 @@
         <item name="android:windowTranslucentStatus">true</item>
     </style>
 
+    <style name="word_title">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_marginBottom">8dp</item>
+        <item name="android:paddingLeft">8dp</item>
+        <item name="android:textAppearance">@android:style/TextAppearance.Large</item>
+    </style>
 </resources>
