--- a/QRScanner/app/src/main/res/layout/activity_scan_history.xml
+++ b/QRScanner/app/src/main/res/layout/activity_scan_history.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ScanHistory"
+    tools:context=".ScanHistoryActivity"
     android:fitsSystemWindows="true">
 
     <androidx.recyclerview.widget.RecyclerView
