--- a/QRScanner/app/src/main/res/values/colors.xml
+++ b/QRScanner/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="transparentDark">#3C000000</color>
     <color name="invisible">#00000000</color>
+    <color name="colorToolbar">#FF424242</color>
 </resources>
