--- a/QRScanner/app/src/main/res/values/styles.xml
+++ b/QRScanner/app/src/main/res/values/styles.xml
@@ -10,7 +10,7 @@
         <item name="android:windowTranslucentStatus">true</item>
     </style>
 
-    <style name="word_title">
+    <style name="result_style">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_marginBottom">8dp</item>
         <item name="android:paddingLeft">8dp</item>
