--- a/QRScanner/app/src/main/res/layout/activity_barcode_result.xml
+++ b/QRScanner/app/src/main/res/layout/activity_barcode_result.xml
@@ -7,6 +7,14 @@
     tools:context=".BarcodeResultActivity"
     android:fitsSystemWindows="true">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorToolbar"
+        app:title="QR Code Reader"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/barcode_result"
         android:layout_width="0dp"
@@ -16,7 +24,8 @@
         android:text="Result"
         android:textAlignment="center"
         android:textColor="#F4F4F4"
-        android:textSize="16sp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textIsSelectable="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
