--- a/QRScanner/app/src/main/res/menu/menu_bottom.xml
+++ b/QRScanner/app/src/main/res/menu/menu_bottom.xml
@@ -4,7 +4,7 @@
     <item android:id="@+id/action_settings"
         android:title="Settings" />
     <item android:id="@+id/action_about"
-        android:title="About" />
+        android:title="Open Source Licenses" />
     <item android:id="@+id/action_torch"
         android:title="Flash"
         android:icon="@drawable/ic_flash_off_white_24dp"
