--- a/QRScanner/app/src/main/res/layout/recyclerview_item.xml
+++ b/QRScanner/app/src/main/res/layout/recyclerview_item.xml
@@ -10,6 +10,5 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:autoLink="web"
-        android:textIsSelectable="true"
-        android:background="@android:color/holo_blue_dark" />
+        android:textIsSelectable="true" />
 </LinearLayout>
