--- a/QRScanner/app/src/main/res/layout/activity_barcode_result.xml
+++ b/QRScanner/app/src/main/res/layout/activity_barcode_result.xml
@@ -16,7 +16,7 @@
         android:text="Result"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textColor="#F4F4F4"
+        android:textColor="@color/colorText"
         android:textIsSelectable="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -30,7 +30,7 @@
         android:layout_height="70dp"
         android:background="@drawable/btn_background"
         android:onClick="copyToClipboard"
-        android:src="@drawable/ic_content_copy_white_40dp"
+        android:src="@drawable/ic_content_copy_black_40dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/open_browser"
@@ -43,6 +43,7 @@
         android:layout_height="wrap_content"
         android:text="Copy to clipboard"
         android:textAlignment="center"
+        android:textColor="@color/colorText"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/copy"
         app:layout_constraintStart_toStartOf="@+id/copy"
@@ -55,7 +56,7 @@
         android:layout_height="70dp"
         android:background="@drawable/btn_background"
         android:onClick="openBrowser"
-        android:src="@drawable/ic_public_white_48dp"
+        android:src="@drawable/ic_public_black_48dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/copy"
         app:layout_constraintStart_toEndOf="@id/history"
@@ -68,6 +69,7 @@
         android:layout_height="wrap_content"
         android:text="Open in browser"
         android:textAlignment="center"
+        android:textColor="@color/colorText"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/open_browser"
         app:layout_constraintStart_toStartOf="@+id/open_browser"
@@ -80,7 +82,7 @@
         android:layout_height="70dp"
         android:background="@drawable/btn_background"
         android:onClick="showHistory"
-        android:src="@drawable/ic_history_white_48dp"
+        android:src="@drawable/ic_history_black_48dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/open_browser"
         app:layout_constraintStart_toStartOf="parent"
@@ -93,6 +95,7 @@
         android:layout_height="wrap_content"
         android:text="History"
         android:textAlignment="center"
+        android:textColor="@color/colorText"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/history"
         app:layout_constraintStart_toStartOf="@+id/history"
