Upgrade scan history database (v2) with delete function - Store Date/Time - Delete selected results - Add swipe to delete option for RecyclerView - Bump database version from 1 to 2

--- a/QRScanner/app/src/main/res/layout/activity_scan_history.xml
+++ b/QRScanner/app/src/main/res/layout/activity_scan_history.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/scan_history_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ScanHistoryActivity"
@@ -24,7 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:onClick="clearDb"
+        android:onClick="clearAll"
         android:text="Clear"
         app:layout_constraintTop_toBottomOf="@+id/recyclerview"
         app:layout_constraintBottom_toBottomOf="parent"
