--- a/QRScanner/app/src/main/res/layout/recyclerview_item.xml
+++ b/QRScanner/app/src/main/res/layout/recyclerview_item.xml
@@ -5,10 +5,19 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textViewResult"
         style="@style/result_style"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:text="Result"
         android:autoLink="web"
         android:textIsSelectable="true" />
+
+    <TextView
+        android:id="@+id/textViewTime"
+        style="@style/time_style"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Date/Time" />
+
 </LinearLayout>
