--- a/QRScanner/app/src/main/res/layout/activity_barcode_result.xml
+++ b/QRScanner/app/src/main/res/layout/activity_barcode_result.xml
@@ -28,6 +28,7 @@
         android:id="@+id/copy"
         android:layout_width="70dp"
         android:layout_height="70dp"
+        android:layout_marginEnd="8dp"
         android:background="@drawable/btn_background"
         android:onClick="copyToClipboard"
         android:src="@drawable/ic_content_copy_black_40dp"
@@ -80,9 +81,10 @@
         android:id="@+id/history"
         android:layout_width="70dp"
         android:layout_height="70dp"
+        android:layout_marginStart="8dp"
         android:background="@drawable/btn_background"
-        android:onClick="showHistory"
-        android:src="@drawable/ic_history_black_48dp"
+        android:onClick="webSearch"
+        android:src="@drawable/ic_search_black_48dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/open_browser"
         app:layout_constraintStart_toStartOf="parent"
@@ -93,7 +95,7 @@
         android:id="@+id/txt_history"
         android:layout_width="70dp"
         android:layout_height="wrap_content"
-        android:text="History"
+        android:text="Web search"
         android:textAlignment="center"
         android:textColor="@color/colorText"
         app:layout_constraintBottom_toBottomOf="parent"
