--- a/QRScanner/app/src/main/res/layout/activity_barcode_result.xml
+++ b/QRScanner/app/src/main/res/layout/activity_barcode_result.xml
@@ -10,19 +10,21 @@
     <TextView
         android:id="@+id/barcode_result"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginTop="16dp"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
+        android:layout_marginBottom="16dp"
         android:text="Result"
-        android:textAlignment="center"
+        android:gravity="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="@color/colorText"
         android:textIsSelectable="true"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:scrollbars="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.28" />
+        app:layout_constraintBottom_toTopOf="@id/open_browser" />
 
     <ImageButton
         android:id="@+id/copy"
@@ -36,7 +38,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/open_browser"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.7" />
+        app:layout_constraintVertical_bias="0.75" />
 
     <TextView
         android:id="@+id/txt_copy"
@@ -62,7 +64,7 @@
         app:layout_constraintEnd_toStartOf="@+id/copy"
         app:layout_constraintStart_toEndOf="@id/history"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.7" />
+        app:layout_constraintVertical_bias="0.75" />
 
     <TextView
         android:id="@+id/txt_open_browser"
@@ -89,7 +91,7 @@
         app:layout_constraintEnd_toStartOf="@+id/open_browser"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.7" />
+        app:layout_constraintVertical_bias="0.75" />
 
     <TextView
         android:id="@+id/txt_history"
