--- a/QRScanner/app/src/main/res/layout/activity_scan_history.xml
+++ b/QRScanner/app/src/main/res/layout/activity_scan_history.xml
@@ -15,6 +15,7 @@
         android:layout_height="0dp"
         tools:listitem="@layout/recyclerview_item"
         android:padding="16dp"
+        android:scrollbars="vertical"
         app:layout_constraintBottom_toTopOf="@+id/clear_db"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
