--- a/QRScanner/app/src/main/res/layout/recyclerview_item.xml
+++ b/QRScanner/app/src/main/res/layout/recyclerview_item.xml
@@ -1,23 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<com.google.android.material.card.MaterialCardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="6dp"
+    app:cardCornerRadius="4dp">
 
-    <TextView
-        android:id="@+id/textViewResult"
-        style="@style/result_style"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Result"
-        android:autoLink="web"
-        android:textIsSelectable="true" />
+        android:layout_height="match_parent"
+        android:layout_margin="4dp">
 
-    <TextView
-        android:id="@+id/textViewTime"
-        style="@style/time_style"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Date/Time" />
+        <TextView
+            android:id="@+id/textViewResult"
+            style="@style/result_style"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Result"
+            android:autoLink="web"
+            android:textIsSelectable="true"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/textViewTime"
+            style="@style/time_style"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Date/Time"
+            app:layout_constraintTop_toBottomOf="@id/textViewResult"
+            app:layout_constraintStart_toStartOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</com.google.android.material.card.MaterialCardView>
