--- a/QRScanner/app/src/main/res/layout/activity_main.xml
+++ b/QRScanner/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_height="match_parent" >
 
         <TextView
-            android:id="@+id/txt_guide"
+            android:id="@+id/txt_scan_guide"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/scan_guide"
