--- a/QRScanner/app/src/main/res/layout/activity_scan_history.xml
+++ b/QRScanner/app/src/main/res/layout/activity_scan_history.xml
@@ -6,17 +6,16 @@
     android:id="@+id/scan_history_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ScanHistoryActivity"
-    android:fitsSystemWindows="true">
+    tools:context=".ScanHistoryActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview"
         android:layout_width="0dp"
         android:layout_height="0dp"
         tools:listitem="@layout/recyclerview_item"
-        android:padding="16dp"
+        android:padding="8dp"
         android:scrollbars="vertical"
-        app:layout_constraintBottom_toTopOf="@+id/clear_db"
+        app:layout_constraintBottom_toTopOf="@+id/text_guide"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -28,7 +27,7 @@
         android:layout_marginBottom="16dp"
         android:onClick="clearAll"
         android:text="Clear"
-        app:layout_constraintTop_toBottomOf="@+id/recyclerview"
+        app:layout_constraintTop_toBottomOf="@+id/text_guide"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/back"
         app:layout_constraintStart_toStartOf="parent" />
@@ -43,6 +42,18 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/clear_db"
-        app:layout_constraintTop_toBottomOf="@+id/recyclerview" />
+        app:layout_constraintTop_toBottomOf="@+id/text_guide" />
+
+    <TextView
+        android:id="@+id/text_guide"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/delete_guide"
+        android:textAlignment="center"
+        android:textAppearance="@android:style/TextAppearance.Material.Small"
+        app:layout_constraintBottom_toTopOf="@+id/clear_db"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/recyclerview" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
