--- a/QRScanner/app/src/main/res/layout/activity_barcode_result.xml
+++ b/QRScanner/app/src/main/res/layout/activity_barcode_result.xml
@@ -24,86 +24,86 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/open_browser" />
+        app:layout_constraintBottom_toTopOf="@id/ib_copy" />
 
     <ImageButton
-        android:id="@+id/copy"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_marginEnd="8dp"
-        android:background="@drawable/btn_background"
-        android:onClick="copyToClipboard"
-        android:src="@drawable/ic_content_copy_black_40dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/open_browser"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.75" />
-
-    <TextView
-        android:id="@+id/txt_copy"
-        android:layout_width="70dp"
-        android:layout_height="wrap_content"
-        android:text="Copy to clipboard"
-        android:textAlignment="center"
-        android:textColor="@color/colorText"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/copy"
-        app:layout_constraintStart_toStartOf="@+id/copy"
-        app:layout_constraintTop_toBottomOf="@+id/copy"
-        app:layout_constraintVertical_bias="0.03" />
-
-    <ImageButton
-        android:id="@+id/open_browser"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:background="@drawable/btn_background"
-        android:onClick="openBrowser"
-        android:src="@drawable/ic_public_black_48dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/copy"
-        app:layout_constraintStart_toEndOf="@id/history"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.75" />
-
-    <TextView
-        android:id="@+id/txt_open_browser"
-        android:layout_width="70dp"
-        android:layout_height="wrap_content"
-        android:text="Open in browser"
-        android:textAlignment="center"
-        android:textColor="@color/colorText"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/open_browser"
-        app:layout_constraintStart_toStartOf="@+id/open_browser"
-        app:layout_constraintTop_toBottomOf="@+id/open_browser"
-        app:layout_constraintVertical_bias="0.03" />
-
-    <ImageButton
-        android:id="@+id/history"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
+        android:id="@+id/ib_copy"
+        android:layout_width="66dp"
+        android:layout_height="66dp"
         android:layout_marginStart="8dp"
         android:background="@drawable/btn_background"
-        android:onClick="webSearch"
-        android:src="@drawable/ic_search_black_48dp"
+        android:onClick="copyToClipboard"
+        android:src="@drawable/ic_content_copy_black_36dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/open_browser"
+        app:layout_constraintEnd_toStartOf="@+id/ib_action"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.75" />
 
     <TextView
-        android:id="@+id/txt_history"
-        android:layout_width="70dp"
+        android:id="@+id/txt_copy"
+        android:layout_width="66dp"
+        android:layout_height="wrap_content"
+        android:text="Copy to clipboard"
+        android:textAlignment="center"
+        android:textColor="@color/colorText"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/ib_copy"
+        app:layout_constraintStart_toStartOf="@+id/ib_copy"
+        app:layout_constraintTop_toBottomOf="@+id/ib_copy"
+        app:layout_constraintVertical_bias="0.03" />
+
+    <ImageButton
+        android:id="@+id/ib_action"
+        android:layout_width="66dp"
+        android:layout_height="66dp"
+        android:background="@drawable/btn_background"
+        android:onClick="doAction"
+        android:src="@drawable/ic_public_black_44dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/ib_search"
+        app:layout_constraintStart_toEndOf="@id/ib_copy"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.75" />
+
+    <TextView
+        android:id="@+id/txt_action"
+        android:layout_width="66dp"
+        android:layout_height="wrap_content"
+        android:text="@string/action_web"
+        android:textAlignment="center"
+        android:textColor="@color/colorText"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/ib_action"
+        app:layout_constraintStart_toStartOf="@+id/ib_action"
+        app:layout_constraintTop_toBottomOf="@+id/ib_action"
+        app:layout_constraintVertical_bias="0.03" />
+
+    <ImageButton
+        android:id="@+id/ib_search"
+        android:layout_width="66dp"
+        android:layout_height="66dp"
+        android:layout_marginEnd="8dp"
+        android:background="@drawable/btn_background"
+        android:onClick="webSearch"
+        android:src="@drawable/ic_search_black_44dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/ib_action"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.75" />
+
+    <TextView
+        android:id="@+id/txt_search"
+        android:layout_width="66dp"
         android:layout_height="wrap_content"
         android:text="Web search"
         android:textAlignment="center"
         android:textColor="@color/colorText"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/history"
-        app:layout_constraintStart_toStartOf="@+id/history"
-        app:layout_constraintTop_toBottomOf="@+id/history"
+        app:layout_constraintEnd_toEndOf="@+id/ib_search"
+        app:layout_constraintStart_toStartOf="@+id/ib_search"
+        app:layout_constraintTop_toBottomOf="@+id/ib_search"
         app:layout_constraintVertical_bias="0.03" />
 
     <Button
@@ -115,7 +115,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/open_browser"
-        app:layout_constraintVertical_bias="0.7" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_copy" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
