Three dot menu for scan history elements

--- a/QRScanner/app/src/main/res/layout/activity_barcode_result.xml
+++ b/QRScanner/app/src/main/res/layout/activity_barcode_result.xml
@@ -44,7 +44,7 @@
         android:id="@+id/txt_copy"
         android:layout_width="66dp"
         android:layout_height="wrap_content"
-        android:text="Copy to clipboard"
+        android:text="@string/action_copy"
         android:textAlignment="center"
         android:textColor="@color/colorText"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -97,7 +97,7 @@
         android:id="@+id/txt_search"
         android:layout_width="66dp"
         android:layout_height="wrap_content"
-        android:text="Web search"
+        android:text="@string/action_web_search"
         android:textAlignment="center"
         android:textColor="@color/colorText"
         app:layout_constraintBottom_toBottomOf="parent"
