--- a/QRScanner/app/src/main/res/layout/material_dialog_text.xml
+++ b/QRScanner/app/src/main/res/layout/material_dialog_text.xml
@@ -7,10 +7,12 @@
 
     <TextView
         android:id="@+id/tv_material"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="16dp"
+        android:paddingStart="20dp"
+        android:paddingEnd="16dp"
+        android:paddingTop="8dp"
+        android:paddingBottom="16dp"
         android:scrollbars="vertical"
         android:textAppearance="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
         android:textSize="16sp"
