--- a/QRScanner/app/src/main/res/layout/recyclerview_item.xml
+++ b/QRScanner/app/src/main/res/layout/recyclerview_item.xml
@@ -28,7 +28,7 @@
             android:layout_marginStart="4dp"
             android:textAppearance="@android:style/TextAppearance.Material.Medium"
             android:text="Result"
-            android:textColor="@color/colorAccent"
+            android:textColor="@color/white"
             android:textIsSelectable="true"
             app:layout_constraintStart_toEndOf="@id/imgview_history"
             app:layout_constraintTop_toTopOf="parent"
@@ -50,7 +50,7 @@
             android:layout_height="wrap_content"
             android:paddingStart="6dp"
             android:paddingEnd="8dp"
-            android:text="⋮"
+            android:text="  ⋮"
             android:textStyle="bold"
             android:textSize="22dp"
             app:layout_constraintEnd_toEndOf="parent"
