--- a/QRScanner/app/src/main/res/values/styles.xml
+++ b/QRScanner/app/src/main/res/values/styles.xml
@@ -11,8 +11,8 @@
     </style>
 
     <style name="OtherActivities" parent="Theme.MaterialComponents.Bridge">
-        <item name="colorPrimary">@color/colorPrimaryDark</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorPrimary">@color/colorPrimaryOther</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryOtherDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
