--- a/QRScanner/app/src/main/res/layout/bottom_action_bar.xml
+++ b/QRScanner/app/src/main/res/layout/bottom_action_bar.xml
@@ -15,7 +15,7 @@
       android:padding="@dimen/top_action_button_padding"
       android:contentDescription="@string/cd_settings_button"
       android:background="?selectableItemBackgroundBorderless"
-      app:srcCompat="@drawable/ic_settings_vd_white_24"/>
+      app:srcCompat="@drawable/ic_settings_vd_white_24" />
 
   <ImageView
       android:id="@+id/history_button"
@@ -25,7 +25,7 @@
       android:padding="@dimen/top_action_button_padding"
       android:contentDescription="@string/cd_history_button"
       android:background="?selectableItemBackgroundBorderless"
-      app:srcCompat="@drawable/ic_history_white_24dp"/>
+      app:srcCompat="@drawable/ic_history_white_24dp" />
 
   <ImageView
       android:id="@+id/flash_button"
@@ -35,6 +35,16 @@
       android:padding="@dimen/top_action_button_padding"
       android:contentDescription="@string/cd_flash_button"
       android:background="?selectableItemBackgroundBorderless"
-      app:srcCompat="@drawable/camera_flash"/>
+      app:srcCompat="@drawable/camera_flash" />
+
+  <ImageView
+      android:id="@+id/gallery_button"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_alignParentStart="true"
+      android:padding="@dimen/top_action_button_padding"
+      android:contentDescription="@string/cd_flash_button"
+      android:background="?selectableItemBackgroundBorderless"
+      app:srcCompat="@drawable/ic_image_24" />
 
 </RelativeLayout>
