--- a/QRScanner/app/src/main/res/layout/activity_image_scanning.xml
+++ b/QRScanner/app/src/main/res/layout/activity_image_scanning.xml
@@ -1,24 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ImageScanningActivity">
+    android:background="@color/black">
+
+    <include
+        layout="@layout/top_action_bar"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/top_action_bar_height"
+        android:layout_gravity="top" />
 
     <ImageView
         android:id="@+id/image_preview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="center" />
+        android:layout_marginTop="@dimen/top_action_bar_height"
+        android:layout_marginBottom="@dimen/preview_card_carousel_height"
+        android:scaleType="centerInside"
+        android:adjustViewBounds="true" />
+
+    <FrameLayout
+        android:id="@+id/dot_view_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/top_action_bar_height"
+        android:layout_marginBottom="@dimen/preview_card_carousel_height"
+        android:background="@color/transparent" />
 
     <ProgressBar
         android:id="@+id/progressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_gravity="center" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/text_decoding"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/wait_for_decode"
+        android:layout_gravity="center|bottom"
+        app:layout_anchorGravity="bottom|center_horizontal"
+        app:layout_anchor="@id/progressBar" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/card_recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/preview_card_carousel_height"
+        android:layout_gravity="bottom"
+        android:paddingBottom="@dimen/preview_card_carousel_padding_bottom"
+        android:paddingTop="@dimen/preview_card_carousel_padding_top"/>
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
