--- a/QRScanner/app/src/main/res/layout/bottom_action_bar.xml
+++ b/QRScanner/app/src/main/res/layout/bottom_action_bar.xml
@@ -43,8 +43,8 @@
       android:layout_height="wrap_content"
       android:layout_alignParentStart="true"
       android:padding="@dimen/top_action_button_padding"
-      android:contentDescription="@string/cd_flash_button"
+      android:contentDescription="@string/cd_gallery_button"
       android:background="?selectableItemBackgroundBorderless"
-      app:srcCompat="@drawable/ic_image_24" />
+      app:srcCompat="@drawable/ic_photo_library_vd_white_24" />
 
 </RelativeLayout>
