--- a/QRScanner/app/src/main/res/values/styles.xml
+++ b/QRScanner/app/src/main/res/values/styles.xml
@@ -16,4 +16,8 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="ImageScanningActivity" parent="Theme.MaterialComponents.NoActionBar">
+        <item name="android:colorEdgeEffect">@color/colorAccent</item>
+    </style>
+
 </resources>
